--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
   "dependencies": {
     "@icons-pack/react-simple-icons": "^10.1.0",
     "@types/react-router-dom": "^5.3.3",
+    "add": "^2.0.6",
+    "button": "^1.1.1",
+    "card": "^2.5.4",
+    "init": "^0.1.2",
+    "input": "^1.0.1",
     "lucide-react": "^0.453.0",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "shadcn-ui": "^0.9.2",
+    "textarea": "^0.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
